Include '--add-opens' to default JVM args (requires JVM 17+)